<resources>
    <string name="app_name">RSEU</string>
    <string name="login_button">Войти в систему</string>
    <string name="register_button">Регистрация</string>
    <string name="to_authorise">Авторизация</string>
    <string name="user_ask">Пользователь:</string>
    <string name="user_name">введите имя</string>
    <string name="password_ask">Пароль:</string>
    <string name="password_name">введите пароль</string>
    <string name="title_activity_start_page">StartPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">РИНХ</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="you">Вы</string>
    <string name="my_team">Моя команда</string>
    <string name="my_events">Мероприятия</string>
    <string name="my_achievements">Портфолио</string>
    <string name="exit">Выход</string>
    <string name="choose_load_category">Выберите категорию достижения</string>
    <string name="load">Загрузить новый документ</string>
    <string name="date">Дата проведения мероприятия</string>
    <string name="OK">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="achieve_name">Наименование</string>
    <string name="achieve_category">Категория</string>
    <string name="achieve_type">Тип</string>
    <string name="achieve_date">Дата</string>
    <string name="back">Вернуться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить изменения</string>
    <string name="confirm_participation">Вы должны подтвердить награды</string>
    <string name="first_achievement_text">Достижений пока нет. Загрузите свой первый документ!</string>
    <string name="comment">введите название достижения</string>
    <string name="login_error">Неверное имя пользователя или пароль</string>
    <string name="personal_inf">Личные данные</string>
    <string name="university_inf">Университетские данные</string>
    <string name="contact_inf">Контакты</string>
    <string name="user_tags">Интересы</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="citizenship">Гражданство</string>
    <string name="birth_date">Дата рождения</string>
    <string name="post">Должность</string>
    <string name="department">Кафедра</string>
    <string name="phone_number">Номер телефона</string>
    <string name="email">E-mail</string>
    <string name="recomendations">Рекомендации</string>
    <string name="match">Совпадение по:</string>
    <string name="invite">Позвать в команду</string>
    <string name="field">Направление</string>
    <string name="members">Состав</string>
    <string name="back_to_teamset">Вернуться к набору в команды</string>
    <string name="visit_rseu">Посетить официальный сайт РГЭУ (РИНХ)?</string>

    <string name="profile">Личный кабинет</string>
    <string name="menu_home">Мероприятия</string>
    <string name="home_second">Мероприятия</string>
    <string name="menu_gallery">Мои проекты</string>
    <string name="menu_slideshow">Мои команды</string>
    <string name="menu_statistics">Статистика</string>
    <string name="menu_rate">Рейтинг</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
