<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Login"
        android:textColor="#0E1060"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/to_authorise"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/user_text"
        android:textColor="#0E1060"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:text="@string/user_ask"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_text"
        android:layout_marginStart="35dp"
        android:layout_toEndOf="@+id/user_text"
        android:hint="@string/user_name">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_text"
        android:textColor="#0E1060"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_text"
        android:layout_alignLeft="@+id/user_text"
        android:layout_marginTop="40dp"
        android:text="@string/password_ask"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_user"
        android:layout_alignRight="@+id/edit_user"
        android:layout_alignBottom="@+id/password_text"
        android:layout_marginRight="0dp"
        android:hint="@string/password_ask"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/attempts"
        android:textColor="#0E1060"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_text"
        android:layout_below="@+id/password_text"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="48dp"
        android:text="Попыток:"
        android:visibility="invisible"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_login2"
        android:textColor="#0E1060"
        android:onClick="onMainLoginClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="376dp"
        android:text="@string/login_button" />

    <TextView
        android:id="@+id/number_of_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/user_text"
        android:layout_alignTop="@+id/attempts"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/login_locked"
        android:textColor="#0E1060"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:layout_alignRight="@+id/edit_password"
        android:layout_alignEnd="@+id/edit_password"
        android:layout_alignLeft="@+id/attempts"
        android:layout_alignStart="@+id/attempts" />

    <TextView
        android:id="@+id/login_error"
        android:textColor="#0E1060"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>